Build-Type: Simple
Name: crockford
Category: Codec
Version: 0.2
Cabal-Version: 2.0
Synopsis: An implementation of Douglas Crockford's base32 encoding.
Description:
    An implementation of Douglas Crockford's base32 encoding.
License: BSD3
License-File: LICENSE
Copyright: (c) 2009 Henry Bucklow
Author: Henry Bucklow
Maintainer: Henry Bucklow <henry@elsie.org.uk>
Tested-With: GHC==6.12

Library
  Hs-Source-Dirs: src
  Build-Depends: base>=4 && < 5, digits, safe, QuickCheck
  Exposed-Modules: Codec.Crockford
  GHC-Options: -Wall

Test-Suite test
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: test
  Main-Is: Tests.hs
  Build-Depends: base, QuickCheck, crockford
